--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,4 +144,5 @@
     <string name="disablerecyclerviewscroll">Disable RecyclerView Scroll</string>
     <string name="selecteditemcolor">Selected Item Color</string>
     <string name="recyclerviewvisibleitem">RecyclerView Visible Item</string>
+    <string name="disabletab">Disable Tab</string>
 </resources>
