--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,4 +145,7 @@
     <string name="selecteditemcolor">Selected Item Color</string>
     <string name="recyclerviewvisibleitem">RecyclerView Visible Item</string>
     <string name="disabletab">Disable Tab</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
