--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,4 +149,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="defaulttab">Default Tab</string>
+    <string name="tabmenuitemtextcolor">Tab Menu Item Text Color</string>
 </resources>
