--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,4 +150,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="defaulttab">Default Tab</string>
     <string name="tabmenuitemtextcolor">Tab Menu Item Text Color</string>
+    <string name="tabmenuitemtextsize">Tab Menu Item Text Size</string>
 </resources>
