--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,4 +151,5 @@
     <string name="defaulttab">Default Tab</string>
     <string name="tabmenuitemtextcolor">Tab Menu Item Text Color</string>
     <string name="tabmenuitemtextsize">Tab Menu Item Text Size</string>
+    <string name="tabmenuitemtextfont">Tab Menu Item Text Font</string>
 </resources>
