--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,4 +152,5 @@
     <string name="tabmenuitemtextcolor">Tab Menu Item Text Color</string>
     <string name="tabmenuitemtextsize">Tab Menu Item Text Size</string>
     <string name="tabmenuitemtextfont">Tab Menu Item Text Font</string>
+    <string name="changetitleontabswitch">Change Title On Tab Switch</string>
 </resources>
