--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,4 +153,5 @@
     <string name="tabmenuitemtextsize">Tab Menu Item Text Size</string>
     <string name="tabmenuitemtextfont">Tab Menu Item Text Font</string>
     <string name="changetitleontabswitch">Change Title On Tab Switch</string>
+    <string name="selecttabprogrammatically">Select Tab Programmatically</string>
 </resources>
