--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,4 +154,5 @@
     <string name="tabmenuitemtextfont">Tab Menu Item Text Font</string>
     <string name="changetitleontabswitch">Change Title On Tab Switch</string>
     <string name="selecttabprogrammatically">Select Tab Programmatically</string>
+    <string name="recyclerviewinsidetab">RecyclerView Inside Tab</string>
 </resources>
