add ontabchangelistner on TabActivity10 and also remove unuse code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,4 +155,5 @@
     <string name="changetitleontabswitch">Change Title On Tab Switch</string>
     <string name="selecttabprogrammatically">Select Tab Programmatically</string>
     <string name="recyclerviewinsidetab">RecyclerView Inside Tab</string>
+    <string name="ontabchangelistner">OnTabChange Listner</string>
 </resources>
