add detectclick on TabActivity11 and also remove unuse code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,4 +156,5 @@
     <string name="selecttabprogrammatically">Select Tab Programmatically</string>
     <string name="recyclerviewinsidetab">RecyclerView Inside Tab</string>
     <string name="ontabchangelistner">OnTabChange Listner</string>
+    <string name="detectonclickoncurrenttab">Detect OnClick On Current Tab</string>
 </resources>
