--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,4 +157,5 @@
     <string name="recyclerviewinsidetab">RecyclerView Inside Tab</string>
     <string name="ontabchangelistner">OnTabChange Listner</string>
     <string name="detectonclickoncurrenttab">Detect OnClick On Current Tab</string>
+    <string name="currenttabindicatorbackground">CurrentTab Indicator Background</string>
 </resources>
