--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,4 +159,5 @@
     <string name="detectonclickoncurrenttab">Detect OnClick On Current Tab</string>
     <string name="currenttabindicatorbackground">CurrentTab Indicator Background</string>
     <string name="currenttabposition">Current Tab Position</string>
+    <string name="swipeviewwithtab">Swipe View With Tab</string>
 </resources>
