add tabhost to kotlin on TabActivity17

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,4 +162,5 @@
     <string name="swipeviewwithtab">Swipe View With Tab</string>
     <string name="longclicklistnerontab">LongClickListner On Tab</string>
     <string name="tabinsidefragment">Tab Inside Fragment</string>
+    <string name="tabhost">Tab Host</string>
 </resources>
