--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,4 +164,5 @@
     <string name="tabinsidefragment">Tab Inside Fragment</string>
     <string name="tabhost">Tab Host</string>
     <string name="passdatatotwotab">Pass Data To Two Tab</string>
+    <string name="viewpagerspeed">ViewPager Speed</string>
 </resources>
