ViewPager2 vertical orientation in ViewPagerActivity3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,4 +165,5 @@
     <string name="tabhost">Tab Host</string>
     <string name="passdatatotwotab">Pass Data To Two Tab</string>
     <string name="viewpagerspeed">ViewPager Speed</string>
+    <string name="viewpagervertical">ViewPager Vertical</string>
 </resources>
