--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,4 +166,5 @@
     <string name="passdatatotwotab">Pass Data To Two Tab</string>
     <string name="viewpagerspeed">ViewPager Speed</string>
     <string name="viewpagervertical">ViewPager Vertical</string>
+    <string name="addonpagechangelistner">Add OnPageChangeListner</string>
 </resources>
