add viewpager with diffrent layout in ViewPagerActivity7

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,4 +169,5 @@
     <string name="addonpagechangelistner">Add OnPageChangeListner</string>
     <string name="disableviewpagerswipe">Disable ViewPager Swipe</string>
     <string name="viewpagerslidebutton">ViewPager Slide Button</string>
+    <string name="viewpagerwithdifferentlayout">ViewPager With Different Layout</string>
 </resources>
