--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,4 +170,5 @@
     <string name="disableviewpagerswipe">Disable ViewPager Swipe</string>
     <string name="viewpagerslidebutton">ViewPager Slide Button</string>
     <string name="viewpagerwithdifferentlayout">ViewPager With Different Layout</string>
+    <string name="viewpagerwithdottedindicator">ViewPager With Dotted Indicator</string>
 </resources>
