--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,4 +171,5 @@
     <string name="viewpagerslidebutton">ViewPager Slide Button</string>
     <string name="viewpagerwithdifferentlayout">ViewPager With Different Layout</string>
     <string name="viewpagerwithdottedindicator">ViewPager With Dotted Indicator</string>
+    <string name="viewpager2withrecyclerview">ViewPager2 With RecyclerView</string>
 </resources>
