--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,4 +173,5 @@
     <string name="viewpagerwithdottedindicator">ViewPager With Dotted Indicator</string>
     <string name="viewpager2withrecyclerview">ViewPager2 With RecyclerView</string>
     <string name="viewpagerfragmentstate">ViewPager Fragment State</string>
+    <string name="addandremoveviewviewpager">Add And Remove View ViewPager</string>
 </resources>
