--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,4 +175,5 @@
     <string name="viewpagerfragmentstate">ViewPager Fragment State</string>
     <string name="addandremoveviewviewpager">Add And Remove View ViewPager</string>
     <string name="viewpagerwithnestedscrollview">ViewPager With NestedScrollView</string>
+    <string name="viewpagercurrentposition">ViewPager Current Position</string>
 </resources>
