--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,4 +177,5 @@
     <string name="viewpagerwithnestedscrollview">ViewPager With NestedScrollView</string>
     <string name="viewpagercurrentposition">ViewPager Current Position</string>
     <string name="fragmentinviewpager2">Fragment In ViewPager2</string>
+    <string name="tablayoutwithviewpager2">TabLayout With ViewPager2</string>
 </resources>
