add show part of viewpager2 page in ViewPagerActivity17

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,4 +179,5 @@
     <string name="fragmentinviewpager2">Fragment In ViewPager2</string>
     <string name="tablayoutwithviewpager2">TabLayout With ViewPager2</string>
     <string name="pagetransformerviewpager">PageTransformer ViewPager</string>
+    <string name="showpartofviewpager2page">Show Part Of ViewPager2 Page</string>
 </resources>
