--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,4 +180,5 @@
     <string name="tablayoutwithviewpager2">TabLayout With ViewPager2</string>
     <string name="pagetransformerviewpager">PageTransformer ViewPager</string>
     <string name="showpartofviewpager2page">Show Part Of ViewPager2 Page</string>
+    <string name="endlessscrollviewpager2">Endless Scroll ViewPager2</string>
 </resources>
