--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -182,4 +182,5 @@
     <string name="showpartofviewpager2page">Show Part Of ViewPager2 Page</string>
     <string name="endlessscrollviewpager2">Endless Scroll ViewPager2</string>
     <string name="migratetoviewpager2">Migrate To ViewPager2</string>
+    <string name="removeviewpager2shadow">Remove ViewPager2 Shadow</string>
 </resources>
