--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,4 +187,5 @@
     <string name="home">Home</string>
     <string name="blog">Blog</string>
     <string name="App">App</string>
+    <string name="navigationheaderview">Navigation Header View</string>
 </resources>
