--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,4 +188,5 @@
     <string name="blog">Blog</string>
     <string name="App">App</string>
     <string name="navigationheaderview">Navigation Header View</string>
+    <string name="menutextcolor">Menu Text Color</string>
 </resources>
