--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,4 +191,5 @@
     <string name="menutextcolor">Menu Text Color</string>
     <string name="menutextfont">Menu Text Font</string>
     <string name="componentnavigation">Component Navigation</string>
+    <string name="bottomdrawernavigation">Bottom Drawer Navigation</string>
 </resources>
