add navigate to new activity in NavigationActivity8

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,4 +192,5 @@
     <string name="menutextfont">Menu Text Font</string>
     <string name="componentnavigation">Component Navigation</string>
     <string name="bottomdrawernavigation">Bottom Drawer Navigation</string>
+    <string name="activitynav">Activity Navigation</string>
 </resources>
