add addondestinationchangelistener in NavigationActivity9

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -193,4 +193,5 @@
     <string name="componentnavigation">Component Navigation</string>
     <string name="bottomdrawernavigation">Bottom Drawer Navigation</string>
     <string name="activitynav">Activity Navigation</string>
+    <string name="addondestinationchangelistener">addOnDestinationChangeListener</string>
 </resources>
