add how to use <action> in NavigationActivity10

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -194,4 +194,5 @@
     <string name="bottomdrawernavigation">Bottom Drawer Navigation</string>
     <string name="activitynav">Activity Navigation</string>
     <string name="addondestinationchangelistener">addOnDestinationChangeListener</string>
+    <string name="actioninnav">Action in nav</string>
 </resources>
