add pass data using safearg in NavigationActivity13

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,5 +196,6 @@
     <string name="addondestinationchangelistener">addOnDestinationChangeListener</string>
     <string name="actioninnav">Action in nav</string>
     <string name="menuitembadge">Menu Item Badge</string>
-    <string name="nextedgraph">Nexted Graph</string>
+    <string name="nestedgraph">Nested Graph</string>
+    <string name="safeargdatapassing">Safe Arg Data Passing</string>
 </resources>
