--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -199,4 +199,5 @@
     <string name="nestedgraph">Nested Graph</string>
     <string name="safeargdatapassing">Safe Arg Data Passing</string>
     <string name="actionbaroncomponent">ActionBar On Component</string>
+    <string name="collapsingtoolbar">Collapsing Toolbar</string>
 </resources>
